Fix overflow for queue

--- a/src/client/components/Player/style.styl
+++ b/src/client/components/Player/style.styl
@@ -8,8 +8,10 @@ $playButtonSize = 90px
   width 100%
   height 100%
   background white
-  padding 20px 0
+  padding 20px 0 0
   border-left solid 2px rgba(0, 0, 0, .05)
+  display flex
+  flex-direction column
 .thumbnail
   width $thumbSize
   height $thumbSize
